--- a/public/angular-app/books_list/books.html
+++ b/public/angular-app/books_list/books.html
@@ -29,7 +29,7 @@
         </table>
         <button ng-show="vm.offset > 0"
             ng-click="vm.previousPage()">previous</button>
-        <button ng-show="vm.next; m" ng-click="vm.nextPage()">next</button>
+        <button ng-show="vm.next;" ng-click="vm.nextPage()">next</button>
         <button class="btn btn-secondary" ng-init='update=false; btn=true'
             ng-show="btn" ng-click='update=true; btn=false'>Add</button>
     </div>
